# TcpClientServerApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: analyze.yml  ci.yml
Client/: .cproject  .project  CMakeLists.txt
Client/Debug/: makefile  objects.mk
Client/Debug/src/: subdir.mk
Client/include/: client.hpp  common.hpp  logger.hpp  message.hpp  packet.hpp
Client/src/: client.cpp  main.cpp  packet.cpp  session.cpp
Server/: .cproject  .gitignore  .project  CMakeLists.txt
Server/Debug/: makefile  objects.mk
Server/Debug/src/: subdir.mk
Server/include/: common.hpp  logger.hpp  message.hpp  packet.hpp  server.hpp  session.hpp  utilities.hpp
Server/src/: main.cpp  packet.cpp  server.cpp  session.cpp  utilities.cpp
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  packet.cpp  packet.hpp
common/: common.hpp  constants.hpp  defaults.hpp  logger.hpp  message.hpp  utilities.cpp  utils.cpp  utils.hpp
server/: CMakeLists.txt  main.cpp  packet.cpp  packet.hpp  server.cpp  server.hpp  session.cpp  session.hpp
